--- a/apps/react-demo/src/app/todo/todo.module.scss
+++ b/apps/react-demo/src/app/todo/todo.module.scss
@@ -5,3 +5,25 @@
  * .container {
  * }
 */
+
+.fade-enter {
+    opacity: 0;
+  }
+  
+  .fade-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
+  }
+  
+  .fade-exit {
+    opacity: 1;
+  }
+  
+  .fade-exit-active {
+    opacity: 0;
+    transition: opacity 500ms ease-out;
+  }
+  
+  .strikethrough {
+    text-decoration: line-through;
+  }
